// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> should render 1`] = `
<DocumentFragment>
  <div
    class="sc-c51f9af1-0 bTgVNy"
    width="150"
  >
    <button
      class="sc-c51f9af1-1 EJzDm"
      color="var(--text)"
      font-size="24"
      height="50"
      width="150"
    >
      <div
        class="sc-c51f9af1-2 buYHhW"
      >
        <div
          class="sc-c51f9af1-4 cRCUqn"
        >
          Test
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Button/> should render in loading state 1`] = `
<DocumentFragment>
  <div
    class="sc-c51f9af1-0 jASMSm loading"
  >
    <button
      class="sc-c51f9af1-1 tUIuH loading"
      color="var(--text)"
      disabled=""
      font-size="24"
    >
      <div
        class="sc-c51f9af1-2 buYHhW"
      >
        <div
          class="sc-c51f9af1-3 gGFHqO loading"
        >
          <div
            class="sc-b46874d8-0 iNvNpZ loader"
            color="var(--text)"
          />
        </div>
        <div
          class="sc-c51f9af1-4 cRCUqn loading"
        >
          Test
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`<Button/> should render with custom props 1`] = `
<DocumentFragment>
  <div
    class="sc-c51f9af1-0 cjUOos"
  >
    <button
      class="sc-c51f9af1-1 lbbzdv"
      color="red"
      font-size="12"
    >
      <div
        class="sc-c51f9af1-2 buYHhW"
      >
        <div
          class="sc-c51f9af1-4 cRCUqn"
        >
          Test
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
